welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:39: error: ';' expected but 'else' found.
									else
                                                                        ^